Changes to Home page, Notification page, Profile page: added feature to upload media (post), created notification model and API route, changs to media service, changes to CreatePost API to allow uploading of form data
